fixed the israeli-palestinian conflict (C) whatthecommit.com

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,23 @@ env:
   global:
   - TERM=dumb
 language: java
-jdk: openjdk8
+services: docker
 addons:
   apt:
     update: true
     packages:
     - bash
+    - curl
+    - python3
+    - python3-pip
 install: true
+before_install:
+- mkdir -p $HOME/.local/bin
+- export PATH=$HOME/.local/bin:$PATH
+- $(which pip3) install --user $(whoami) --upgrade pip
+- $(which pip3) install --user $(whoami) --upgrade httpie docker-compose
+- source <(curl -s https://raw.githubusercontent.com/daggerok/bash-functions/master/main.bash)
+- stop_any 8080 80
 jobs:
   include:
   - stage: test
@@ -49,6 +59,8 @@ jobs:
 #    - cd $TRAVIS_BUILD_DIR && ./mvnw versions:display-parent-updates versions:display-plugin-updates versions:display-dependency-updates -U >/dev/null
 #    - cd $TRAVIS_BUILD_DIR && ./mvnw versions:display-parent-updates versions:display-plugin-updates versions:display-dependency-updates
 cache:
+  pip: true
   packages: true
   directories:
-  - ~/.m2
+  - ~/.docker/
+  - ~/.m2/
