Updated build targets. (C) whatthecommit.com

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ jobs:
     jdk: openjdk11
     name: test
     script:
-    - cd $TRAVIS_BUILD_DIR && ./mvnw
+    - cd $TRAVIS_BUILD_DIR && ./mvnw -DskipTests >/dev/null
     - cd java -jar $TRAVIS_BUILD_DIR/hazelcast/target/*-all.jar
   - stage: test
     jdk: openjdk8
