We Had To Use Dark Magic To Make This Work (C) whatthecommit.com

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ before_install:
 - mkdir -p $HOME/.local/bin
 - export PATH=$HOME/.local/bin:$PATH
 - $(which pip3) install --user $(whoami) --upgrade pip
-- $(which pip3) install --user $(whoami) --upgrade httpie docker-compose
+- $(which pip3) install --user $(whoami) --upgrade httpie
+#- $(which pip3) install --user $(whoami) --upgrade httpie docker-compose
 - source <(curl -s https://raw.githubusercontent.com/daggerok/bash-functions/master/main.bash)
 - stop_any 8080 80
 jobs:
